requirements.txt updated

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,98 @@
-allennlp==1.1.0
-optuna
-allennlp_optuna
+adapter-transformers==1.1.1
+alembic==1.4.3
+allennlp==1.3.0
+allennlp-optuna==0.1.3
+attrs==20.2.0
+backcall==0.2.0
+blis==0.4.1
+boto3==1.16.4
+botocore==1.19.4
+catalogue==1.0.0
+certifi==2020.6.20
+chardet==3.0.4
+click==7.1.2
+cliff==3.5.0
+cmaes==0.7.0
+cmd2==1.4.0
+colorama==0.4.4
+colorlog==4.6.2
+cymem==2.0.3
+dataclasses==0.6
+decorator==4.4.2
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz
+filelock==3.0.12
+future==0.18.2
+h5py==2.10.0
+idna==2.10
+importlib-metadata==2.0.0
+iniconfig==1.1.1
+ipykernel==5.3.4
+ipython==7.19.0
+ipython-genutils==0.2.0
+jedi==0.17.2
+jmespath==0.10.0
+joblib==0.17.0
+jsonnet==0.16.0
+jsonpickle==1.4.1
+jupyter-client==6.1.7
+jupyter-core==4.6.3
+Mako==1.1.3
+MarkupSafe==1.1.1
+murmurhash==1.0.2
+nltk==3.5
+numpy==1.19.2
+optuna==2.3.0
+overrides==3.1.0
+packaging==20.4
+pandas==1.1.4
+parso==0.7.1
+pbr==5.5.1
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==8.0.1
+pkg-resources==0.0.0
+plac==1.1.3
+pluggy==0.13.1
+preshed==3.0.2
+prettytable==0.7.2
+prompt-toolkit==3.0.8
+protobuf==3.13.0
+ptyprocess==0.6.0
+py==1.9.0
+Pygments==2.7.2
+pyparsing==2.4.7
+pyperclip==1.8.1
+pytest==6.1.1
+python-dateutil==2.8.1
+python-editor==1.0.4
+pytz==2020.4
+PyYAML==5.3.1
+pyzmq==19.0.2
+regex==2020.10.23
+requests==2.24.0
+s3transfer==0.3.3
+sacremoses==0.0.43
+scikit-learn==0.23.2
+scipy==1.5.3
+sentencepiece==0.1.91
+six==1.15.0
+spacy==2.3.2
+SQLAlchemy==1.3.22
+srsly==1.0.2
+stevedore==3.3.0
+tensorboardX==2.1
+thinc==7.4.1
+threadpoolctl==2.1.0
+tokenizers==0.9.3
+toml==0.10.1
+torch==1.7.0+cu110
+torchtext==0.8.0
+tornado==6.1
+tqdm==4.50.2
+traitlets==5.0.5
+transformers==4.0.1
+typing-extensions==3.7.4.3
+urllib3==1.25.11
+wasabi==0.8.0
+wcwidth==0.2.5
+zipp==3.3.2
